# CurveFittingRunners

./: .gitignore  main.ipynb  pyproject.toml  uv.bat
.ipynb_checkpoints/: main-checkpoint.ipynb
Códigos em octave/: comparacao.m  penalizacao.m  powerlaw.m
Códigos em python/: dados_vinicius.ipynb  modelos.py
Dados/: Dados_USP.xlsx
OctaveCodes/: teste.m
PythonCodes/: dados_vinicius.ipynb  main.ipynb  modelos.py
PythonCodes/Results/: validacao_modelos.xlsx  ~$validacao_modelos.xlsx
